src/tests/snapshots/hebi__tests__native_class__cannot_inherit_native.snap
---
source: src/tests/native_class.rs
expression: snapshot
---
# Modules:


# Input:
class Bad(Test0):
  pass


# Result (error):
cannot inherit from `<native class "Test0">` because script-defined classes may not inherit from native classes

# Stdout:


