src/tests/snapshots/hebi__tests__native_class__class_method_call.snap
---
source: src/tests/native_class.rs
expression: snapshot
---
# Modules:


# Input:
v := WithMethods()
print v.exposed()


# Result (success):
none

# Stdout:
exposed


