src/tests/snapshots/hebi__tests__native_class__class_method_call_not_exposed.snap
---
source: src/tests/native_class.rs
expression: snapshot
---
# Modules:


# Input:
v := WithMethods()
print v.not_exposed()


# Result (error):
cannot get field `"not_exposed"` on value `<native class "WithMethods" instance>`

# Stdout:


