src/tests/snapshots/hebi__tests__native_class__class_with_field.snap
---
source: src/tests/native_class.rs
expression: snapshot
---
# Modules:


# Input:
t0 = Test1()
t1 = Test1(v=20)

print t0.v, t1.v

t0.v = t1.v

print t0.v, t1.v


# Result (success):
none

# Stdout:
10 20
20 20


