src/tests/snapshots/hebi__tests__native_class__empty_class.snap
---
source: src/tests/native_class.rs
expression: snapshot
---
# Modules:


# Input:
print Test0


# Result (success):
none

# Stdout:
<native class "Test0">


