src/tests/snapshots/hebi__tests__native_class__mutate_through_method.snap
---
source: src/tests/native_class.rs
expression: snapshot
---
# Modules:


# Input:
m := Mutable()
print m.value
m.add(10)
print m.value


# Result (success):
none

# Stdout:
0
10


